<resources>
    <string name="app_name">EnApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Energy Data in CA</string>
    <string name="nav_header_subtitle">energyCA</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_country">Country</string>
    <string name="menu_land">Air pollution in Kyrgyzstan</string>

    <string name="menu_import">Consumption</string>
    <string name="menu_export">Situation in Kazakhstan</string>
    <string name="menu_use">Use and production</string>
    <string name="menu_sources">Sources</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_work">Work</string>
    <string name="menu_source">Source</string>

</resources>