<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:showIn="navigation_view">

<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_country"
        android:title="@string/menu_country" />
    <item
        android:id="@+id/nav_kg"
        android:icon="@drawable/ic_air"
        android:title="@string/menu_land" />

    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_import"
        android:title="@string/menu_import" />
    <item
        android:id="@+id/nav_slideshow"
        android:icon="@drawable/ic_export"
        android:title="@string/menu_export" />

    <item
        android:id="@+id/nav_work"
        android:icon="@drawable/ic_country"
        android:title="@string/menu_use" />

    <item
        android:id="@+id/nav_source"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/menu_source" />


</group>
</menu>