<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.enapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_air"
        android:name="com.example.enapp.ui.airpollution.AirFragment"
        android:label="@string/menu_land"
        tools:layout="@layout/fragment_air" />


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.enapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.enapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_work"
        android:name="com.example.enapp.ui.work.WorkFragment"
        android:label="@string/menu_work"
        tools:layout="@layout/fragment_work" />

    <fragment
        android:id="@+id/nav_source"
        android:name="com.example.enapp.ui.source.SourceFragment"
        android:label="@string/menu_source"
        tools:layout="@layout/fragment_source" />

</navigation>